--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -80,6 +80,7 @@ download.error.message.outofmemory = The downloadsystem is out of memory
 download.error.message.rangeheaderparseerror = Unexpected rangeheader format:
 download.error.message.rangeheaders = Server does not support chunkload
 download.error.message.unavailable = Service temp. unavailable
+download.system.waitforconnection = Cur. %s/%s connections...waiting
 downloadlink.status.done = Finished
 downloadlink.status.downloadinprogress = Loading
 downloadlink.status.error.agb_not_signed = TOSs not signed
@@ -93,6 +94,7 @@ downloadlink.status.error.file_exists = File already exists
 downloadlink.status.error.file_not_found = File not found
 downloadlink.status.error.no_connection = No Connection
 downloadlink.status.error.plugin_specific = Plugin Error
+downloadlink.status.error.post_process = Processing error
 downloadlink.status.error.premium = Premium Error
 downloadlink.status.error.temp_unavailable = Temp. unavailable
 downloadlink.status.error.unknown = Unknown Error
@@ -105,11 +107,14 @@ gui.askname = What's your name?
 gui.btn_add = Add
 gui.btn_cancel = Cancel
 gui.btn_cancelcountdown = Stop Countdown
+gui.btn_details = Details
 gui.btn_exit = Exit
+gui.btn_no = No
 gui.btn_ok = OK
 gui.btn_save = Save
 gui.btn_select = Select
 gui.btn_settings = Settings
+gui.btn_yes = Yes
 gui.captchawindow.askforinput = Please enter
 gui.captchawindow.title = jAntiCaptcha actived!
 gui.captchawindow.title_error = JAntiCaptcha failed. PLease enter code!
@@ -125,6 +130,8 @@ gui.config.captcha.jac_disable = Disable automatic captcha
 gui.config.captcha.train.level = Displaythreshold
 gui.config.captcha.train.level.instanthelp = http://ns2.km32221.keymachine.de/jdownloader/web/page.php?id=3
 gui.config.captcha.train.show_timeout = Countdown for captchawindow
+gui.config.clr.name = Reconnect via CLR
+gui.config.clr.script = CLR Script
 gui.config.download.autochunks = Fit chunks to filesize
 gui.config.download.autoresume = Let Reconnects interrupt resumeable downloads
 gui.config.download.buffersize = Max. Buffersize[MB]
@@ -202,39 +209,6 @@ gui.config.gui.plaf = Style (restart to apply)
 gui.config.gui.showsplash = Show splash screen on program startup
 gui.config.gui.soundtheme = Soundtheme
 gui.config.gui.theme = Theme
-gui.config.httpreconnect.connection = Connection
-gui.config.httpreconnect.connectpostparameter = POST code for connection
-gui.config.httpreconnect.connectrequestproperties = RequestProperties for connection
-gui.config.httpreconnect.connecttype = Type of connection
-gui.config.httpreconnect.disconnect = Disconnection
-gui.config.httpreconnect.disconnectpostparameter = POST code for disconnection
-gui.config.httpreconnect.disconnectrequestproperties = RequestProperties for connection
-gui.config.httpreconnect.disconnectrequestpropertiestooltip = <HTML>Enter the code this way:<BR>key1==value1;;key2==value2;;key3==value3.1="value3.2"</HTML>
-gui.config.httpreconnect.disconnecttype = Type of disconnection
-gui.config.httpreconnect.importrouter = Import router
-gui.config.httpreconnect.importrouterdata = Import Router data
-gui.config.httpreconnect.loginpostparameter = POST code for login)
-gui.config.httpreconnect.loginrequestproperties = RequestProperties for login
-gui.config.httpreconnect.loginrequestproperties.tooltip = <HTML>Enter the code this way:<BR>key1==value1;;key2==value2;;key3==value3.1="value3.2"</HTML>
-gui.config.httpreconnect.loginrequesttype = Login type
-gui.config.httpreconnect.loginstring = Login string
-gui.config.httpreconnect.logoffstring = Logoff string
-gui.config.httpreconnect.name = Router
-gui.config.httpreconnect.password = Password
-gui.config.httpreconnect.retries = Retries (0=endless)
-gui.config.httpreconnect.routerip = Hostname/Router IP
-gui.config.httpreconnect.routername = Router name
-gui.config.httpreconnect.routerport = Router port
-gui.config.httpreconnect.selectrouter = Please select your router
-gui.config.httpreconnect.tab_connect = Connection establishment
-gui.config.httpreconnect.tab_control = Control
-gui.config.httpreconnect.tab_disconnect = Connection disconnect
-gui.config.httpreconnect.tab_ipcheck = Ip-Check
-gui.config.httpreconnect.tab_login = Login
-gui.config.httpreconnect.tab_router = Router
-gui.config.httpreconnect.testreconnect = Reconnect router
-gui.config.httpreconnect.username = User name
-gui.config.httpreconnect.waittimeforipcheck = Timeout for first IP-Check (sec)
 gui.config.jac.column.method = Method
 gui.config.jac.column.use = Use
 gui.config.jac.name = jAntiCaptcha
@@ -332,6 +306,7 @@ gui.config.unrar.extractfolder = Folder to extract:
 gui.config.unrar.extractfolderenabled = Extract to folder (if you don't want to extract to the download directory)
 gui.config.unrar.overwrite = Overwrite existing file
 gui.config.unrar.passwordlist = Password List
+gui.config.unrar.path = Extract to
 gui.config.unrar.thread = Go on with the download after extraction
 gui.config.unrar.usehjmerge = Merge HJSplitfiles
 gui.config.webupdate.name = Webupdate
@@ -352,6 +327,8 @@ gui.download.onlinecheckfailed = [Not available]
 gui.download.waittime_status = Wait %s min
 gui.downloadlink.aborted = [aborted]
 gui.downloadlink.disabled = [deactivated]
+gui.downloadlink.errorpostprocess = [failed] %s
+gui.downloadlink.errorpostprocess2 = [convert failed]
 gui.downloadlink.finished = [finished]
 gui.downloadlink.hosterwaittime = [wait for new ip]
 gui.downloadlink.offline = [offline]
@@ -822,6 +799,7 @@ modules.packagemanager.packagename = JD-Update
 modules.reconnect.pleaseselect = Method:
 modules.reconnect.testreconnect = Test Reconnect
 modules.reconnect.types.batch = Batch
+modules.reconnect.types.clr = CLR Script
 modules.reconnect.types.extern = External
 modules.reconnect.types.liveheader = LiveHeader/Curl
 modules.unrar.enabled.instanthelp = http://ns2.km32221.keymachine.de/jdownloader/web/page.php?id=17
@@ -870,9 +848,13 @@ plugins.errors.error = Error:
 plugins.errors.pluginerror = Plugin error. Inform Support
 plugins.errors.uploadedto.premiumtrafficreached = Traffic limit reached
 plugins.errors.wrongpassword = Password wrong
+plugins.host.enterlinkpassword = Please enter Linkpassword
+plugins.host.fastload.overload.long = Fast-load.net Overload!. Fullspeed download only in browsers
+plugins.host.fastload.overload.short = Fast-load.net Overload
 plugins.host.gigasize.freeaccount.pass = Password
 plugins.host.gigasize.freeaccount.use = Use Free account
 plugins.host.gigasize.freeaccount.user = Email
+plugins.host.meinupload.serverdefect = Service not available
 plugins.host.premium.info.cash = Cash
 plugins.host.premium.info.error = The %s plugin does not support the Accountinfo feature yet.
 plugins.host.premium.info.files = Files
@@ -890,6 +872,8 @@ plugins.host.rapidshare.errors.811d7f115500de90d1495ef963040930 = The server, th
 plugins.host.rapidshare.errors.bcfe246b0634299062224a73ae50f17e = This file seems to be illegal and is locked. Downloading this file is prohibited by Rapidshare.
 plugins.host.rapidshare.errors.d11f499020a3607ffdf987ce3968c692 = 10 GB limit reached.
 plugins.host.server.unavailable = Servererror
+plugins.host.sharebaseto.servererror = Service not available
+plugins.host.xup = Password wrong
 plugins.hoster.error.agb = TOC not signed
 plugins.hoster.general.passwordprotectedinput = Links are protected: Enter password:
 plugins.hoster.passquestion = Link '%s' is passwordprotected. Enter password:
@@ -901,9 +885,11 @@ plugins.hoster.rapidshare.com.prefferedserver = Preferred server (*1)
 plugins.hoster.rapidshare.com.prefferedserver.random = Random
 plugins.hoster.rapidshare.com.preselection = Accept pre-selection (*2)
 plugins.hoster.rapidshare.com.telekom = Use Telekom server if avaiable*
+plugins.hoster.uploadedto.chunks = Premium connections # (>1 causes higher traffic)
 plugins.menu.accounts = Accounts
 plugins.menu.configs = Configuration
 plugins.menu.enable_premium = Enable Account
+plugins.menu.noaccountsyet = No accounts yet
 plugins.menu.premiuminfo = Get Accountinfo
 plugins.netload.downloadpassword_question = Password protected. Enter Password for %s
 plugins.netload.downloadpassword_wrong = Linkpassword is wrong
@@ -949,6 +935,7 @@ plugins.optional.jdchat.menu.windowstatus = Chatwindow
 plugins.optional.jdchat.name = JD Chat
 plugins.optional.jdchat.performonstart = Perform commands after connection estabilished
 plugins.optional.jdchat.user = Nickname
+plugins.optional.jdlighttray.minimizetotray = Minimize to tray
 plugins.optional.jdlighttray.name = JDLightTrayIcon
 plugins.optional.jdlighttray.startminimized = Start minimized
 plugins.optional.jdlowspeed.maxspeed = Max. internetspeed in kb/s (DSL 3000≈350kb/s)
@@ -1078,6 +1065,7 @@ plugins.optional.webinterface.needlogin = Need User Authentication
 plugins.optional.webinterface.port = Port
 plugins.optional.webinterface.refresh = AutoRefresh
 plugins.optional.webinterface.refresh_interval = Refresh Interval
+plugins.premium.premiumbutton = Get Premium Account
 plugins.serienjunkies.catdialog.action = Choose an action
 plugins.serienjunkies.catdialog.title = SerienJunkies ::CAT::
 plugins.trayicon.popup.bottom.simdls = Simultaneous downloads
