--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -85,6 +85,7 @@ download.error.message.outofmemory = Es wird zuviel Speicher verbraucht
 download.error.message.rangeheaderparseerror = Unerwarteter Mehrfachverbindungfehler
 download.error.message.rangeheaders = Server unterstützt keine Mehrfachverbindungen
 download.error.message.unavailable = Kurzeitig nicht verfügbar
+download.system.waitforconnection = Momentan %s/%s Verbindungen ... Wartend
 downloadlink.status.done = Abgeschlossen
 downloadlink.status.downloadinprogress = Lade
 downloadlink.status.error.agb_not_signed = AGB nicht akzeptiert
@@ -122,11 +123,14 @@ gui.askname = Dein Name?
 gui.btn_add = Hinzufügen
 gui.btn_cancel = Abbrechen
 gui.btn_cancelcountdown = Countdown stoppen
+gui.btn_details = Details
 gui.btn_exit = Beenden
+gui.btn_no = Nein
 gui.btn_ok = OK
 gui.btn_save = Speichern
 gui.btn_select = auswählen
 gui.btn_settings = Einstellungen
+gui.btn_yes = Ja
 gui.captchawindow.askforinput = Bitte eingeben!
 gui.captchawindow.title = jAntiCaptcha aktiv!
 gui.captchawindow.title_error = jAntiCaptcha Fehler. Bitte Code eingeben!
@@ -142,6 +146,8 @@ gui.config.captcha.jac_disable = Automatische Bilderkennung abschalten
 gui.config.captcha.train.level = Anzeigeschwelle
 gui.config.captcha.train.level.instanthelp = http://jdownloader.org/page.php?id=3
 gui.config.captcha.train.show_timeout = Anzeigedauer des Eingabefensters
+gui.config.clr.name = Reconnect via CLR
+gui.config.clr.script = CLR Script
 gui.config.download.autochunks = Chunks an Dateigröße anpassen.
 gui.config.download.autoresume = Reconnect darf weiterführbare Downloads unterbrechen
 gui.config.download.buffersize = Max. Buffersize[MB]
@@ -187,10 +193,6 @@ gui.config.fengshui.fritzbox.title = Fritz!Box erkannt
 gui.config.fengshui.fritzbox.upnp.checkbox = Mitteilung nicht mehr zeigen
 gui.config.fengshui.fritzbox.upnpactive = Sie haben eine Fritz!Box, der Reconnect läuft über Upnp.<br> Sie brauchen keinen Reconnecteinstellungen zu tätigen.
 gui.config.fengshui.fritzbox.upnpinactive = Bitte aktivieren sie Upnp bei ihrer Fritz!Box <br><a href="http://%s">zur Fritz!Box</a><br><a href="http://wiki.jdownloader.org/index.php?title=Fritz!Box_Upnp">Wikiartikel: Fritz!Box Upnp</a>
-gui.config.fengshui.password = Password:
-gui.config.fengshui.routerip = RouterIP:
-gui.config.fengshui.routername = Routername:
-gui.config.fengshui.user = Benutzername:
 gui.config.general.createsubfolders = Wenn möglich Unterordner mit Paketname erstellen
 gui.config.general.downloaddirectory = Downloadverzeichnis
 gui.config.general.filelogger = Erstelle Logdatei im ./logs/ Ordner
@@ -217,39 +219,6 @@ gui.config.gui.plaf = Style (Neustart nötig)
 gui.config.gui.showsplash = Splashscreen beim Start zeigen
 gui.config.gui.soundtheme = Soundtheme
 gui.config.gui.theme = Theme
-gui.config.httpreconnect.connection = Verbindungsaufbau
-gui.config.httpreconnect.connectpostparameter = POST Parameter für den Verbindungsaufbau
-gui.config.httpreconnect.connectrequestproperties = RequestProperties für den Verbindungsaufbau
-gui.config.httpreconnect.connecttype = Art des Verbindungsaufbaus
-gui.config.httpreconnect.disconnect = Verbindungsabbruch
-gui.config.httpreconnect.disconnectpostparameter = POST Parameter für den Verbindungsabbruch
-gui.config.httpreconnect.disconnectrequestproperties = RequestProperties für den Verbindungsabbruch
-gui.config.httpreconnect.disconnectrequestpropertiestooltip = <HTML>Die Werte werden folgendermaßen eingegeben:<BR>key1==value1;;key2==value2;;key3==value3.1="value3.2"</HTML>
-gui.config.httpreconnect.disconnecttype = Art des Verbindungsabbruchs
-gui.config.httpreconnect.importrouter = Router importieren
-gui.config.httpreconnect.importrouterdata = Routerdaten importieren
-gui.config.httpreconnect.loginpostparameter = POST Parameter für den Login
-gui.config.httpreconnect.loginrequestproperties = Requestparameter den Login
-gui.config.httpreconnect.loginrequestproperties.tooltip = <HTML>Die Werte werden folgendermaßen eingegeben:<BR>key1==value1;;key2==value2;;key3==value3.1="value3.2"</HTML>
-gui.config.httpreconnect.loginrequesttype = Art der Anmeldung
-gui.config.httpreconnect.loginstring = Anmeldestring
-gui.config.httpreconnect.logoffstring = Abmeldestring
-gui.config.httpreconnect.name = Router
-gui.config.httpreconnect.password = Password
-gui.config.httpreconnect.retries = Versuche (0=unendlich)
-gui.config.httpreconnect.routerip = Hostname/IP des Routers
-gui.config.httpreconnect.routername = Name des Routers
-gui.config.httpreconnect.routerport = Port des Routers
-gui.config.httpreconnect.selectrouter = Bitte wähle deinen Router aus
-gui.config.httpreconnect.tab_connect = Verbindung
-gui.config.httpreconnect.tab_control = Kontrolle
-gui.config.httpreconnect.tab_disconnect = Disconnect
-gui.config.httpreconnect.tab_ipcheck = IPCheck
-gui.config.httpreconnect.tab_login = Login
-gui.config.httpreconnect.tab_router = Router
-gui.config.httpreconnect.testreconnect = Testreconnect durchführen
-gui.config.httpreconnect.username = Benutzername
-gui.config.httpreconnect.waittimeforipcheck = Wartezeit bis zum ersten IP-Check [sek]
 gui.config.jac.column.method = Methode
 gui.config.jac.column.use = Verwenden
 gui.config.jac.name = jAntiCaptcha
@@ -334,7 +303,6 @@ gui.config.tablables.hostplugin = Host Plugins
 gui.config.tablables.jac = OCR/jAntiCaptcha
 gui.config.tablables.reconnect = Reconnect
 gui.config.tablables.unrar = Entpacker
-gui.config.tablables.updater = Update
 gui.config.title = Konfiguration
 gui.config.unrar.autofoldercount = Ab X Dateien in einen eigenen Ordner verschieben (0 ist aus)
 gui.config.unrar.cmd = UnRAR command
@@ -348,9 +316,9 @@ gui.config.unrar.extractfolder = Zielordner:
 gui.config.unrar.extractfolderenabled = Im Zielordner entpacken (Wenn die Dateien nicht im Downloadordner entpackt werden sollen)
 gui.config.unrar.overwrite = Schon vorhandene Dateien überschreiben
 gui.config.unrar.passwordlist = Passwort Liste
+gui.config.unrar.path = Entpacken nach
 gui.config.unrar.thread = Download erst nach dem Entpacken fortsetzen
 gui.config.unrar.usehjmerge = HJSplit-Archive automatisch zusammenfügen
-gui.config.webupdate.name = Webupdate
 gui.configdialog.wikilink.theconfigurationmenu = http://jdownloader.org/wiki/index.php?title=Konfig:
 gui.dialog.about.sourceurl = http://service.jdownloader.org/html/about_de.html
 gui.dialog.about.title = About JDownloader
@@ -368,6 +336,8 @@ gui.download.onlinecheckfailed = [Nicht verfügbar]
 gui.download.waittime_status = Warte %s Min.
 gui.downloadlink.aborted = [abgebrochen]
 gui.downloadlink.disabled = [deaktiviert]
+gui.downloadlink.errorpostprocess = [fehlgeschlagen] %s
+gui.downloadlink.errorpostprocess2 = [Konvertierung fehlgeschlagen]
 gui.downloadlink.finished = [fertig]
 gui.downloadlink.hosterwaittime = [Warte auf neue IP]
 gui.downloadlink.status.wait = %s min warten
@@ -860,6 +830,7 @@ modules.packagemanager.packagename = JD-Update
 modules.reconnect.pleaseselect = Bitte Methode auswählen:
 modules.reconnect.testreconnect = Reconnect testen
 modules.reconnect.types.batch = Batch
+modules.reconnect.types.clr = CLR Script
 modules.reconnect.types.extern = Extern
 modules.reconnect.types.liveheader = LiveHeader/Curl
 modules.unrar.enabled.instanthelp = http://jdownloader.org/page.php?id=17
@@ -907,9 +878,13 @@ plugins.errors.error = Fehler:
 plugins.errors.pluginerror = Plugin Fehler. Bitte Support informieren
 plugins.errors.uploadedto.premiumtrafficreached = Traffic Grenze erreicht
 plugins.errors.wrongpassword = Passwort falsch
+plugins.host.enterlinkpassword = Bitte Linkpasswort eingeben
+plugins.host.fastload.overload.long = Fast-load.net Überladung! Download mit Fullspeed nur im Browser möglich
+plugins.host.fastload.overload.short = Fast-load.net Überladung
 plugins.host.gigasize.freeaccount.pass = Passwort
 plugins.host.gigasize.freeaccount.use = FreeAccount benutzen
 plugins.host.gigasize.freeaccount.user = eMail
+plugins.host.meinupload.serverdefect = Service nicht verfügbar
 plugins.host.premium.info.cash = Cash
 plugins.host.premium.info.error = Das %s Plugin unterstützt noch keine Accountinformationen.
 plugins.host.premium.info.files = Dateien
@@ -926,6 +901,8 @@ plugins.host.premium.password = Passwort
 plugins.host.premium.useaccount = Premium Account verwenden
 plugins.host.premium.user = Benutzer
 plugins.host.server.unavailable = Serverfehler
+plugins.host.sharebaseto.servererror = Service nicht verfügbar
+plugins.host.xup = Passwort falsch
 plugins.host.youtube.convert.audio = Konvertiere zu *.mp3
 plugins.host.youtube.convert.audioandvideo = Erstelle *.mp3
 plugins.host.youtube.pluginextensions.3gp = ->3gp
@@ -948,9 +925,11 @@ plugins.hoster.rapidshare.com.prefferedserver = Bevorzugte Server
 plugins.hoster.rapidshare.com.prefferedserver.random = Zufällig
 plugins.hoster.rapidshare.com.preselection = Vorauswahl übernehmen
 plugins.hoster.rapidshare.com.telekom = Telekom Server verwenden falls verfügbar
+plugins.hoster.uploadedto.chunks = Premium Verbindungen # (>1 verursacht höheren Traffic)
 plugins.menu.accounts = Accounts
 plugins.menu.configs = Konfiguration
 plugins.menu.enable_premium = Account aktivieren
+plugins.menu.noaccountsyet = Keine Accounts eingerichtet
 plugins.menu.premiuminfo = AccountInfo holen
 plugins.netload.downloadpassword_question = Passwort geschützt. Passwort eingeben:
 plugins.netload.downloadpassword_wrong = Passwort ist falsch.
@@ -996,6 +975,7 @@ plugins.optional.jdchat.menu.windowstatus = Chatfenster
 plugins.optional.jdchat.name = JD Chat
 plugins.optional.jdchat.performonstart = Befehle nach dem Verbinden ausführen
 plugins.optional.jdchat.user = Nickname
+plugins.optional.jdlighttray.minimizetotray = Zum Tray minimieren
 plugins.optional.jdlighttray.name = JDLightTrayIcon
 plugins.optional.jdlighttray.startminimized = Minimiert starten
 plugins.optional.jdlowspeed.maxspeed = Maximale Internetgeschwindigkeit in kb/s (DSL 3000≈350kb/s)
@@ -1125,6 +1105,7 @@ plugins.optional.webinterface.needlogin = Authentifikation benötigt
 plugins.optional.webinterface.port = Port
 plugins.optional.webinterface.refresh = AutoRefresh
 plugins.optional.webinterface.refresh_interval = Refresh Interval
+plugins.premium.premiumbutton = Premium-Account erwerben
 plugins.serienjunkies.catdialog.action = Wählen Sie eine Aktion aus:
 plugins.serienjunkies.catdialog.title = SerienJunkies ::CAT::
 plugins.statustext.captchadetection = Ermittle Captchacode
