--- a/trunk/ressourcen/jd/languages/Nederlands.lng
+++ b/trunk/ressourcen/jd/languages/Nederlands.lng
@@ -1,11 +1,11 @@
-﻿action.passwordlist.name = Paswoord lijst bewerken
+﻿﻿action.passwordlist.name = Paswoord lijst bewerken
 ﻿﻿addons.jdlowspeed.statusmessage.disabled = Lage Snelheid detectie uitschakelen
 ﻿addons.jdlowspeed.statusmessage.enabled = Lage Snelheiddetectie ingeschakeld
 addons.jdshutdown.menu.disable = Na Download Systeem Afsluiten Deactiveren
 addons.jdshutdown.menu.enable = Na Download Systeem Afsluiten Activeren
 addons.jdshutdown.statusmessage.disabled = JDownloader zal het Systeem na het Downloaden NIET afsluiten.
 addons.jdshutdown.statusmessage.enabled = JDownloader zal het Systeem na het Downloaden afsluiten.
-addons.schedule.menu.abort = Afbreken
+addons.schedule.menu.abort = Annuleren
 addons.schedule.menu.add = Toevoegen
 addons.schedule.menu.close = Sluiten
 addons.schedule.menu.create = Nieuw
@@ -69,7 +69,7 @@ controller.status.reconnect = Herconnecteren
 controller.status.retryonerror = Her proberen (%s/%s) in 3 seconds
 controller.status.running = Loopt
 controller.status.tempunavailable = Tijdelijk niet beschikbaar
-controller.status.termination =  Afbreken
+controller.status.termination = Annuleren
 controller.status.tomanyuser = Te veel gebruikers
 controller.status.unknownerror = Onbekende Fout
 controller.status.wait = Wachten: %s sec.
@@ -97,6 +97,7 @@ download.error.message.outofmemory = Er werd te veel buffer verbruikt
 download.error.message.rangeheaderparseerror = onverwachte meervoudige verbindings fout
 download.error.message.rangeheaders = Server ondersteunt geen meervoudige verbindignen
 download.error.message.unavailable = service tijdelijk niet beschikbaar
+download.system.waitforconnection = Huidige. %s/%s connecties...wachtend
 downloadlink.status.done = Klaar
 downloadlink.status.downloadinprogress = Bezig met laden
 downloadlink.status.error.agb_not_signed = AGB niet aanvaard
@@ -116,6 +117,7 @@ downloadlink.status.error.no_free_space = Uu te weinig aan opslagcapaciteit
 downloadlink.status.error.not_owner = Reeds in bewerking
 downloadlink.status.error.not_uploaded = Upload Foutmelding
 downloadlink.status.error.plugin_specific = Plugin Foutmelding
+downloadlink.status.error.post_process = Processing error
 downloadlink.status.error.premium = Premium Foutmelding
 downloadlink.status.error.security = Lees/Schrijf- Fout
 downloadlink.status.error.static_wait = Wachttijd
@@ -133,16 +135,19 @@ gui.accountcheck.pluginerror = Plugin %s is mogelijk defect. Informeer support!
 gui.askname = Jou naam?
 gui.btn_accept = Accepteren
 gui.btn_add = Toevoegen
-gui.btn_cancel = Afbreken
+gui.btn_cancel = Annuleren
 gui.btn_cancelcountdown = Stop Countdown
 gui.btn_continue = Doorgaan
+gui.btn_details = Details
 gui.btn_exit = Sluiten
+gui.btn_no = Nee
 gui.btn_notaccept = Niet Accepteren
 gui.btn_ok = OK
 gui.btn_save = Opslaan
 gui.btn_savetofile = Bestand opslaan
 gui.btn_select = Kiezen
 gui.btn_settings = Instellingen
+gui.btn_yes = Ja
 gui.captchawindow.askforinput = AUB Ingeven!
 gui.captchawindow.title = jAntiCaptcha actief!
 gui.captchawindow.title_error = jAntiCaptcha Foutmelding. Code AUB ingeven!
@@ -164,7 +169,7 @@ gui.config.captcha.ces.btn_messages = Toon mijn berichten
 gui.config.captcha.ces.btn_register = Registreren
 gui.config.captcha.ces.btn_sendmessages = Bericht verzenden
 gui.config.captcha.ces.btn_stats = Mijn Statistieken
-gui.config.captcha.ces.help = http://jdownloader.org/page.php?id=106
+gui.config.captcha.ces.help = http://jdownloader.ath.cx/page.php?id=106
 gui.config.captcha.ces.pass = C.E.S. Paswoord
 gui.config.captcha.ces.register = Gewenste Gebruikersnaam
 gui.config.captcha.ces.register.error = Er is een Fout opgetreden
@@ -177,19 +182,21 @@ gui.config.captcha.ces.sendMessage.success = Bericht aan %s verstuurd
 gui.config.captcha.CES.tab = Captcha Exchange Service
 gui.config.captcha.ces.user = C.E.S. Gebruikersnaam
 gui.config.captcha.extendedCaptcha = Captchabewerking aantonen
-gui.config.captcha.extendedCaptcha.instanthelp = http://jdownloader.org/faq.php
+gui.config.captcha.extendedCaptcha.instanthelp = http://jdownloader.ath.cx/faq.php
 gui.config.captcha.JAC.tab = jAntiCaptcha
 gui.config.captcha.jac_disable = Automatische Beeldherkenning uitschakelen
 gui.config.captcha.jac_methods = Automatische Beeldherkennig gebruiken voor:
 gui.config.captcha.show_input_dialog = Toont het ingaveveld 
 gui.config.captcha.train.level = Aanwijzingslimiet
-gui.config.captcha.train.level.instanthelp = http://jdownloader.org/page.php?id=3
+gui.config.captcha.train.level.instanthelp = http://jdownloader.ath.cx/page.php?id=3
 gui.config.captcha.train.show_timeout = Duuraanwijzing Ingavevensters
 gui.config.captcha.use_Ces = CaptchaExchangeServer gebruiken(Nieuwstart nodig)
 gui.config.captcha.use_collector = Niet erkende Captchas Online verzamelen
 gui.config.captcha.useCes = Gebruikt Captcha Exchange Server
 gui.config.captcha.useCESPenaltyWarning = Toon waarschuwing om strafpunten te vermijden
 gui.config.cbo_expert = Expert Modus
+gui.config.clr.name = Reconnect via CLR
+gui.config.clr.script = CLR Script
 gui.config.download.autochunks = Delen aan bestandgrootte aanpassen.
 gui.config.download.autoresume = Herconnect mag vergaande downloads onderbreken
 gui.config.download.buffersize = Max. Buffersize[MB]
@@ -429,7 +436,7 @@ gui.config.plugin.search.column_author = Auteur
 gui.config.plugin.search.column_host = Hosts
 gui.config.plugin.search.column_id = ID
 gui.config.plugin.search.name = Naar plugins zoeken
-gui.config.popup.btn_cancel = Afbreken
+gui.config.popup.btn_cancel = Annuleren
 gui.config.popup.btn_ok = OK
 gui.config.popup.title = Configuratie
 gui.config.reconnect.name = Herconnecteren
@@ -438,8 +445,8 @@ gui.config.routeripfinder = Router IP Zoeken
 gui.config.routeripfinder.close = Venster Sluiten
 gui.config.routeripfinder.featchip = Zoeken naar Router IP...
 gui.config.showcontaineronloadinfo = Gedetaileerde Containerinformatie aangeven bij het openen
-gui.config.showcontaineronloadinfo.helpurl = http://jdownloader.org/page.php?id=102
-gui.config.subpanel.btn_cancel = Afbreken
+gui.config.showcontaineronloadinfo.helpurl = http://jdownloader.ath.cx/page.php?id=102
+gui.config.subpanel.btn_cancel = Annuleren
 gui.config.subpanel.btn_ok = OK
 gui.config.tablables.addons = Addon manager
 gui.config.tablables.containerplugin = Link-Container
@@ -482,11 +489,12 @@ gui.config.unrar.passwordlist.btn_cancel.mnem = A
 gui.config.unrar.passwordlist.btn_cancel.name = Annuleren
 gui.config.unrar.passwordlist.btn_save.mnem = s
 gui.config.unrar.passwordlist.btn_save.name = Opslaan
+gui.config.unrar.path = Uitpakken in
 gui.config.unrar.thread = Download eerst na het uitpakken voortzetten
 gui.config.unrar.usehjmerge = HJSplit-Archieven automatisch samenvoegen
 gui.config.webupdate.name = Webupdate
 gui.configdialog.wikilink.theconfigurationmenu = http://jdownloader.org/wiki/index.php?title=Config:
-gui.dialog.about.sourceurl = http://service.jdownloader.org/html/about_en.html
+gui.dialog.about.sourceurl = http://jdservice.ath.cx/html/about_en.html
 gui.dialog.about.title = Over JDownloader
 gui.dialogs.agb_tos.agbaccepted = Ik accepteer de voorwaarde
 gui.dialogs.agb_tos.description = De Algemene voorwaarde (AGB) van %s werden niet gelezen en geaccepteerd.
@@ -509,7 +517,9 @@ gui.download.onlinecheckfailed = [Niet beschikbaar]
 gui.download.waittime_status = Wacht %s min
 gui.downloadlink.aborted = [geannuleerd]
 gui.downloadlink.disabled = [gedeactiveerd]
-gui.downloadlink.finished = [klaar]
+gui.downloadlink.errorpostprocess = [mislukte] %s
+gui.downloadlink.errorpostprocess2 = [convertering mislukt]
+﻿gui.downloadlink.finished = [klaar]
 gui.downloadlink.hosterwaittime = [wachten op nieuw ip]
 gui.downloadlink.offline = [offline]
 gui.downloadlink.status.crcfailed = Checksum Foutmelding
@@ -876,8 +886,8 @@ gui.tab.download.column_progress = Vooruitgang
 gui.tab.download.column_status = Status
 gui.tab.plugin_activity.column_plugin = Module
 gui.tab.plugin_activity.column_progress = Voortgang
-gui.table.contextmenu.abort = afbreken
-gui.table.contextmenu.abortpackage = afbreken
+gui.table.contextmenu.abort = Annuleren
+gui.table.contextmenu.abortpackage = Annuleren
 gui.table.contextmenu.browselink = met Browser openen
 gui.table.contextmenu.copypassword = Paswoord kopiëren
 gui.table.contextmenu.copypassword_package = Paswoord Kopiëren
@@ -1055,7 +1065,7 @@ interaction.shutdown.name = Afsluiten
 interaction.simpleexecute.cmd = Uitvoeren
 interaction.simpleexecute.executein = Uitvoeren in 
 interaction.simpleexecute.extended = Uitgebreide Instelingen
-interaction.simpleexecute.helplink = http://jdownloader.org/page.php?id=119
+interaction.simpleexecute.helplink = http://jdownloader.ath.cx/page.php?id=119
 interaction.simpleexecute.name = Programma/Script Uitvoeren
 interaction.simpleexecute.parameter = Parameter (1 Parameter per lijn)
 interaction.simpleexecute.test = Nu uitvoeren
@@ -1157,7 +1167,7 @@ main.start.logwarning.title = Log waarschuwing
 main.status.active = aan
 main.status.inactive = uit
 main.twitter.url = http://twitter.com/statuses/user_timeline/jdownloader.xml
-main.urls.faq = http://jdownloader.org/faq.php?lng=deutsch
+main.urls.faq = http://jdownloader.ath.cx/faq.php?lng=deutsch
 modules.container.dlc.containerinfo = <div style="width:450px;font-family:Geneva, Arial, Helvetica, sans-serif; font-size: 9px;"><font color="#0066FF"><strong>DLContainer succesvol geladen.</strong></font><br/><hr/><table style="width:450px"><tr><td>Gemaakt van </td><td>%s</td></tr><tr><td>Gemaakt met </td><td>%s</td></tr><tr><td>Pakketten </td><td>%s</td></tr><tr><td>Categorie </td><td>%s</td></tr><tr ><td colspan="2">%s</td></tr></table></div>
 modules.container.dlc.loadedmessage = DownloadLinkContainer geladen
 modules.packagemanager.downloadednewpackage.title2 = <p>Updates geladen.Een nieuwstart is nodig.<br/> JDownloader nu herstarten?<hr>%s</p>
@@ -1167,9 +1177,10 @@ modules.packagemanager.packagename = JD-Update
 modules.reconnect.pleaseselect = A.U.B. een methode uitkiezen:
 modules.reconnect.testreconnect = Test Herconnectie
 modules.reconnect.types.batch = Batch
+﻿modules.reconnect.types.clr = CLR Script
 modules.reconnect.types.extern = Extern
 modules.reconnect.types.liveheader = LiveHeader/Curl
-modules.unrar.enabled.instanthelp = http://jdownloader.org/page.php?id=17
+modules.unrar.enabled.instanthelp = http://jdownloader.ath.cx/page.php?id=17
 modules.unrar.name = RAR extractor
 plugin.optional.jdchat.teamviewer.yourtvdata = Uw Teamviewer Data:
 plugin.rapidshare.tickettime = Wacht %s min. voor tikker
@@ -1224,10 +1235,14 @@ plugins.errors.error = Fout:
 plugins.errors.pluginerror = Plugin Fout. Informeer Support
 plugins.errors.uploadedto.premiumtrafficreached = Traffic Grens bereikt
 plugins.errors.wrongpassword = Paswoord fout
+plugins.host.enterlinkpassword = AUB Link paswoord ingeven
+plugins.host.fastload.overload.long = Fast-load.net Overladen!. Download met volledige snelheid enkel via browser mogelijk
+plugins.host.fastload.overload.short = Fast-load.net Overladen
 plugins.host.gigasize.freeaccount.pass = Paswoord
 plugins.host.gigasize.freeaccount.use = FreeAccount gebruiken
 plugins.host.gigasize.freeaccount.user = eMail
 plugins.host.imagefap.imageerror = Beeld foutmelding
+plugins.host.meinupload.serverdefect = Service niet beschikbaar
 plugins.host.netload.try2SimultanDownloads = Probeer 2 Bestanden gelijktijdig te downloaden
 plugins.host.premium.account = Premium Account
 plugins.host.premium.email = Email
@@ -1251,7 +1266,9 @@ plugins.host.rapidshare.errors.33f66fa600e57edd85714127295c7bcc = Bestand niet g
 plugins.host.rapidshare.errors.811d7f115500de90d1495ef963040930 = De server, waarop het bestand is opgeslagen, is offline. Probeer later opnieuw.
 plugins.host.rapidshare.errors.bcfe246b0634299062224a73ae50f17e = Dit bestand is illegaal en geblokkeerd. Het Downloaden van dit bestand is door Rapidshare verboden.
 plugins.host.rapidshare.errors.d11f499020a3607ffdf987ce3968c692 = 10 GB limiet bereikt
+plugins.host.sharebaseto.servererror = Service niet beschikbaar
 plugins.host.server.unavailable = Serverfout
+plugins.host.xup = Paswoord fout
 plugins.host.youtube.convert.audio = Converteer naar *.mp3
 plugins.host.youtube.convert.audioandvideo = Opstellen *.mp3
 plugins.host.youtube.pluginextensions.3gp = ->3gp
@@ -1275,8 +1292,8 @@ plugins.hoster.rapidshare.com.concernspremiumUser = (*1) Premium gebruikers moet
 plugins.hoster.rapidshare.com.extendedtab = Uitgebreide instellingen
 plugins.hoster.rapidshare.com.freeDownloadIfLimitNotReached = Premium: Free Download wanneer het limiet nog niet bereikt is
 plugins.hoster.rapidshare.com.happyHours = Happy Hour Check
-plugins.hoster.rapidshare.com.hhactive.html = <link href='http://jdownloader.org/jdcss.css' rel='stylesheet' type='text/css' /><body><div><p style='text-align:center'><img src='http://jdownloader.org/img/hh.jpg' /><br>Tot nu toe actief %s<br>Laatst gecontroleerd sinds %s<br>Laatste Happy Hour van %s tot %s</p></div></body>
-plugins.hoster.rapidshare.com.hhinactive.html = <link href='http://jdownloader.org/jdcss.css' rel='stylesheet' type='text/css' /><body><div><p style='text-align:center'><img src='http://jdownloader.org/img/nhh.jpg' /><br>Laatste Happy Hour Phase beëindigd om %s<br>Laatst gecontroleerd voor %s<br>Laatste Happy Hour van %s tot %s</p></div></body>
+plugins.hoster.rapidshare.com.hhactive.html = <link href='http://jdownloader.ath.cx/jdcss.css' rel='stylesheet' type='text/css' /><body><div><p style='text-align:center'><img src='http://jdownloader.ath.cx/img/hh.jpg' /><br>Tot nu toe actief %s<br>Laatst gecontroleerd sinds %s<br>Laatste Happy Hour van %s tot %s</p></div></body>
+plugins.hoster.rapidshare.com.hhinactive.html = <link href='http://jdownloader.ath.cx/jdcss.css' rel='stylesheet' type='text/css' /><body><div><p style='text-align:center'><img src='http://jdownloader.ath.cx/img/nhh.jpg' /><br>Laatste Happy Hour Phase beëindigd om %s<br>Laatst gecontroleerd voor %s<br>Laatste Happy Hour van %s tot %s</p></div></body>
 plugins.hoster.rapidshare.com.important = Belangrijk!
 plugins.hoster.rapidshare.com.increasetickettime = Verhoog Ticketwachttijd (0%-500%)
 plugins.hoster.rapidshare.com.info.error = <div style='text-align:center; width:100%; height:100%; color:red;'><b>Account kon niet worden gevonden!</b></div>
@@ -1308,9 +1325,11 @@ plugins.hoster.rapidshare.de.premiumPass = Premium Paswoord
 plugins.hoster.rapidshare.de.premiumUser = Premium Gebruikersnaam
 plugins.hoster.rapidshare.de.usePremium = Premium Account gebruiken
 plugins.hoster.shareonlinebiz.captcha = Captcha Herkenning
+plugins.hoster.uploadedto.chunks = Premium connecties # (>1 bezorgt hogere trafiek)
 plugins.menu.accounts = Accounts
 plugins.menu.configs = Configuratie
 plugins.menu.enable_premium = Activeer Account
+plugins.menu.noaccountsyet = Geen accounts ingesteld
 plugins.menu.premiuminfo = Ophalen Accountinfo
 plugins.netload.downloadpassword_question = Paswoordbeschermd. Geef Paswoord in voor %s
 plugins.netload.downloadpassword_wrong = Linkpaswoord is foutief
@@ -1362,6 +1381,7 @@ plugins.optional.jdchat.menu.windowstatus = Chat-venster
 plugins.optional.jdchat.name = JD Chat
 plugins.optional.jdchat.performonstart = Commando na verbinding uitvoeren
 plugins.optional.jdchat.user = Bijnaam
+plugins.optional.jdlighttray.minimizetotray = Minimalizeer naar tray
 plugins.optional.jdlighttray.name = JDLightTrayIcon
 plugins.optional.jdlighttray.startminimized = Minimaliseerd starten
 plugins.optional.jdlowspeed.maxspeed = Maximale Internet snelheid in kb/s (DSL 3000≈350kb/s)
@@ -1498,6 +1518,7 @@ plugins.optional.webinterface.needlogin = Verificatie nodig
 plugins.optional.webinterface.port = Poort
 plugins.optional.webinterface.refresh = AutoRefresh
 plugins.optional.webinterface.refresh_interval = Refresh Interval
+plugins.premium.premiumbutton = Premium Account verkrijgen
 plugins.rapidshare.captcha = OCR & Wachttijd
 plugins.rapidshare.captcha.progress = Captchadetectie
 plugins.rapidshare.ces.status = C.E.S aktief
@@ -1553,7 +1574,7 @@ sys.confirm.dorestart = Deze instellingen benodigen een nieuwstart. Nieuwstart n
 sys.dlc.error_version = DLC encryptie mislukt. Wees zeker dat je de laatste versie van jDownloader gebruikt.
 sys.dlc.success = DLC encryptie succesvol. Uitpakken testen?
 sys.header.jdownloader = jDownloader
-sys.message.welcome = Bezoek ons op http://jdownloader.org
+sys.message.welcome = Bezoek ons op http://jdownloader.ath.cx
 sys.warning.dlcerror = Defecte DLC Container
 sys.warning.dlcerror.server = <b>Heb je de laatste versie van JD geïnstalleerd?</b> <br>Server melden:
 sys.warning.dlcerror_invalid = Ongeldige DLC
